# hanshal-forecast-bot

./: .env.template  .gitignore  README.md  eval_main.py  main.py  manual_questions.example.json  metaculus_utils.py  pyproject.toml  test_tool_limits.py  utils.py
eval_inputs/: eval_questions_20.json  eval_questions_3.json  eval_questions_modal_smoke_1.json  resolved_context_39523_39575_39476.json
evals/: README.md
prompts/: analysis_summary_bullets.txt  base_rate_agent_prompt.txt  binary_question_prompt.txt  current_questions_prompt.txt  eval_qbaf_generate.txt  eval_qbaf_root_base_estimate.txt  eval_qbaf_similarity_judge.txt  evidence_agent_prompt.txt  exa_research_prompt.txt  final_forecast_binary.txt  final_forecast_mc.txt  final_forecast_numeric.txt  historical_questions_prompt.txt  historical_search_queries.txt  inside_view_multiple_choice_prompt.txt  inside_view_numeric_prompt.txt  inside_view_prompt.txt  multiple_choice_question_prompt.txt  numeric_question_prompt.txt  outside_view_agent_prompt.txt  outside_view_prompt.txt  question_ranking_prompt.txt
scripts/: build_eval_question_file.py  build_eval_question_file_from_api2_list.py  modal_eval.py
src/: agent_infrastructure.py  base_rate_agent.py  bayes.py  evidence_agent.py  exa_utils.py  final_forecast.py  forecast.py  forecast_logger.py  forecast_runner.py  inside_view.py  manual_questions.py  message_utils.py  metaculus_utils.py  outside_view.py  prediction_market_check.py  token_cost.py  utils.py
tests/: test_bayes_orchestrator.py  test_build_eval_question_file.py  test_build_eval_question_file_from_api2_list.py  (+14 more)
(+18 files in other folders)
