[project]
name = "metac-bot-template"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<4.0"
dynamic = ["dependencies"]
authors = [
    { name = "Vasile Popescu", email = "elisescu@elisescu.com" }
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
requests = "^2.32.3"
asknews = "^0.11.2"
numpy = "^2.3.0"
openai = "^1.57.4"
python-dotenv = "^1.0.1"
forecasting-tools = "^0.2.54"
exa_py = "^1.06"
langchain = "^1.2.9"
langchain-community = "^0.4.1"
langchain-openai = "^1.1.7"
langgraph = "^1.0.8"
langchain-experimental = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
